2010.01.20 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrencode.c:
	  - Bug fix.
	* tests/decoder.[ch]:
	  - Code refactoring.
	* tests/test_{qrencode,mask,monkey}.c, Makefile.am:
	  - New tests added.
	* qrencode_inner.h:
	  - Typo fix.
	* NEWS:
	  - Updated.

2010.01.18 Kentaro FUKUCHI <fukuchi@megaui.net>
	* configure.ac:
	  - Configuration cleanups.
	* tests/Makefile.am:
	  - Wrong conditional branch fixed.
	* tests/decoder.[ch], tests/Makefile.am:
	  - Decoding function has been added.
	* tests/test_{qrinput,qrspec,qrencode}.c:
	  - New tests added.

2010.01.16 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrencode.[ch]:
	  - QRcode_encodeData{,MQR,Structured}() have been added.
	* tests/test_qrencode.c:
	  - New test has been added.

2009.11.27 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrencode.h:
	  - Typo fixes.

2009.11.06 Kentaro FUKUCHI <fukuchi@megaui.net>
	* NEWS, README:
	  - Documents updated.
	* qrspec.[ch], mqrspec.[ch]:
	  - *_clearCache were not thread safe.
	  - "Thread unsafe" warnings were removed.
	* rscode.[ch]
	  - free_rs_cache was not thread safe.
	  - "Thread unsafe" warnings were removed.

2009.09.28 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrenc.c:
	  - David's patch has been applied. (Thanks to David)
	  - New options '-d' and '--dpi' have been added.
	  - Typo fixes.
	* tests/view_qrcode.c:
	  - Typo fixes.

2009.06.08 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrencode.c:
	  - FrameFiller_nextMQR() has integrated to FrameFiller_next().
	  - FrameFiller_new() now requires mqr flag.
	* qrencode.[ch], tests/prof_qrencode.c, tests/test_{qrencode,monkey}.c:
	  - QRcode_clearCache() has been added.
	* configure.ac, qrencode_inner.h, qrencode.c, mask.[ch], mmask.[ch],
	  qrinput.h, qrspec.c, tests/common.h:
	  - A macro WITH_TESTS has been introduced.
	  - "#ifdef __STATIC" has been replaced with "#ifdef __WITH_TESTS".
	  - Some definitions in qrencode_inner.h have been moved to appropriate
	    header files.